Compare Page (Basic Functionality)

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       <button class="nav-btn active">
         <span class="icon">&#x1F4AC;</span> Chat
       </button>
-      <button class="nav-btn">
+      <button class="nav-btn" onclick="location.href='/compare'">
         <span class="icon">&#x2194;</span> Compare
       </button>
       <button class="nav-btn">
