--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -155,3 +155,37 @@ body {
 .send-icon {
   font-size: 1.2em;
 }
+
+
+/*---COMPARE TAB --- */
+.compare-container {
+  padding-top: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  border-radius: 20px;
+  width: 98%;
+  height: 92%;
+  overflow: hidden;
+  position: relative;
+}
+
+#comparison-items-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.comparison-item {
+  flex: 1 1 300px;
+  border: 1px solid #ccc;
+  padding: 16px;
+  background: #fafafa;
+  border-radius: 8px;
+  box-sizing: border-box;
+  min-width: 250px;
+  max-width: 350px;
+}
