Multi-Item Comparison

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -27,8 +27,11 @@
   <div class="compare-container">
     <h1>Product Comparison</h1>
     <div class="compare-inputs">
-      <input id="item1-input" type="text" placeholder="Enter first item" />
-      <input id="item2-input" type="text" placeholder="Enter second item" />
+      <div class="inputs-wrapper">
+        <input class="item-input" type="text" placeholder="Enter item name" />
+        <input class="item-input" type="text" placeholder="Enter item name" />
+      </div>
+      <button id="add-btn">+</button>
       <button id="compare-btn">Compare</button>
     </div>
     <div id="comparison-results" class="comparison-results">
