--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -18,12 +18,14 @@ body {
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); */
 }
 
+
 .chat-container {
+  padding-top: 3%;
   background-color: #fff;
   border: 1px solid #dcdcdc;
   border-radius: 20px;
   width: 98%;
-  height: 97%;
+  height: 91%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -145,7 +147,8 @@ body {
   display: flex;
   align-items: center;
   gap: 5px;
-  margin-left: 5px;
+  margin-left: 50px;
+  z-index: 9999;
 }
 
 .chat-input-area button:hover {
@@ -153,6 +156,7 @@ body {
 }
 
 .send-icon {
+  z-index: 999;
   font-size: 1.2em;
 }
 
