Basic Shopping List Frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <button class="nav-btn" onclick="location.href='/compare'">
         <span class="icon">&#x2194;</span> Compare
       </button>
-      <button class="nav-btn">
+      <button class="nav-btn" onclick="location.href='/shopping-list'">
         <span class="icon">&#x1F4E6;</span> Bundles
       </button>
     </div>
