--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -8,6 +8,20 @@
 </head>
 
 <body>
+    <div class="chat-header">
+        <div class="navbar">
+            <button class="nav-btn" onclick="location.href='/'">
+                <span class="icon">&#x1F4AC;</span> Chat
+            </button>
+            <button class="nav-btn" onclick="location.href='/compare'">
+                <span class="icon">&#x2194;</span> Compare
+            </button>
+            <button class="nav-btn active" onclick="location.href='/shopping-list'">
+                <span class="icon">&#x1F4E6;</span> Bundles
+            </button>
+        </div>
+    </div>
+
     <div class="shopping-list-container">
         <h1>Shopping List Assistant</h1>
         <input id="event-input" type="text" placeholder="What event are you shopping for?" />
