--- a/templates/compare.html
+++ b/templates/compare.html
@@ -18,7 +18,7 @@
       <button class="nav-btn active" onclick="location.href='/compare'">
         <span class="icon">&#x2194;</span> Compare
       </button>
-      <button class="nav-btn">
+      <button class="nav-btn" onclick="location.href='/shopping-list'">
         <span class="icon">&#x1F4E6;</span> Bundles
       </button>
     </div>
