--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,8 +1,7 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #e5e5e5;
+  background-color: #E3E9EB;
   margin: 0;
-  /* padding: 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,11 +17,23 @@ body {
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); */
 }
 
+.header {
+  font-size: xx-large;
+  color: #171D1E;
+  font-weight: normal;
+}
+
+.description {
+  margin-top: -10px;
+  font-size: small;
+  color: #3F484B;
+  font-weight: normal;
+}
 
 .chat-container {
   padding-top: 3%;
-  background-color: #fff;
-  border: 1px solid #dcdcdc;
+  background-color: #F3F6F7;
+  border: 1px solid #bfc8cb;
   border-radius: 20px;
   width: 98%;
   height: 91%;
@@ -37,8 +48,9 @@ body {
 .navbar {
   display: flex;
   justify-content: center;
-  background-color: #e5e5e5;
+  background-color: #E3E9EB;
   border-radius: 0px 0px 25px 25px;
+  /*   border: 10px; */
   padding: 10px;
   padding-left: 15vw;
   padding-right: 15vw;
@@ -46,6 +58,33 @@ body {
   width: fit-content;
   position: relative;
   z-index: 1000;
+  border-right: 1px solid #bfc8cb;
+  border-bottom: 1px solid #bfc8cb;
+  border-left: 1px solid #bfc8cb;
+
+}
+
+
+.navbar::before {
+  content: '';
+  position: absolute;
+  left: 0px;
+  top: 0;
+  height: 24%;
+  left: -5px;
+  border-left: 10px solid #E3E9EB;
+  z-index: 1;
+}
+
+.navbar::after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  top: 0;
+  height: 24%;
+  left: 99%;
+  border-left: 10px solid #E3E9EB;
+  z-index: 1;
 }
 
 .nav-btn {
@@ -79,7 +118,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  background-color: #fff;
+  background-color: #F3F6F7;
 }
 
 .chat-message {
@@ -168,11 +207,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: #fff;
-  border: 1px solid #dcdcdc;
+  background-color: #F3F6F7;
+  border: 1px solid #bfc8cb;
   border-radius: 20px;
   width: 98%;
-  height: 92%;
+  height: 91%;
   overflow: hidden;
   position: relative;
 }
@@ -183,6 +222,7 @@ body {
   gap: 20px;
 }
 
+
 .comparison-item {
   flex: 1 1 300px;
   border: 1px solid #ccc;
@@ -192,4 +232,106 @@ body {
   box-sizing: border-box;
   min-width: 250px;
   max-width: 350px;
+}
+
+/*---BUNDLES TAB --- */
+.shopping-list-container {
+  padding-top: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #F3F6F7;
+  border: 1px solid #bfc8cb;
+  border-radius: 20px;
+  width: 98%;
+  height: 91%;
+  overflow: hidden;
+  position: relative;
+}
+
+.suggested-item {
+  /*   background-color: #f7f7f7; */
+  background: #AAB5B8;
+  background: radial-gradient(circle, rgba(178, 194, 194, 1) 0%, rgba(219, 228, 231, 1) 100%);
+
+
+  border: 1px solid #dcdcdc;
+  border-radius: 32px;
+  padding: 15px;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 450px;
+}
+
+.item-name {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.item-reason {
+  margin-top: -10px;
+  font-size: 0.9em;
+  color: #555;
+}
+
+.item-price {
+  /*   margin: 10px; */
+  font-size: 1em;
+  color: #333;
+  /*   text-align: right; */
+}
+
+.item-image {
+  width: 300px;
+  border-radius: 16px;
+  border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 40px;
+}
+
+.shopping-list-input {
+  display: flex;
+  align-items: center;
+  width: 500px;
+  margin: 20px;
+  /*   padding: 5px; */
+  border: 1px solid #dcdcdc;
+
+  background-color: #E3E9EB;
+  border-radius: 20px;
+}
+
+#event-input {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  margin: 0px;
+  padding: 20px;
+  border: none;
+  background-color: #E3E9EB;
+  border-radius: 20px;
+
+}
+
+#start-btn {
+  padding: 7px;
+  border: 0px;
+  border-radius: 10px;
+  padding-left: 14px;
+  padding-right: 14px;
+  margin: 0px;
+  background-color: #E3E9EB;
+  font-weight: bold;
+  /*   color: transparent; */
+}
+
+
+
+
+.item-details {
+  /*   align-items: center; */
+  /*   display: flex; */
+  /*   flex-direction: row; */
+  /*   align-items: center; */
+  /*   margin-top: 10px; */
 }
