--- a/templates/compare.html
+++ b/templates/compare.html
@@ -12,20 +12,37 @@
 
   <div class="chat-header">
     <div class="navbar">
-      <button class="nav-btn" onclick="location.href='/'">
-        <span class="icon">&#x1F4AC;</span> Chat
+      <button class="nav-btn active" onclick="location.href='/'">
+        <span class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff">
+            <path
+              d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+          </svg>
+        </span> Search
       </button>
-      <button class="nav-btn active" onclick="location.href='/compare'">
-        <span class="icon">&#x2194;</span> Compare
+      <button class="nav-btn" onclick="location.href='/compare'">
+        <span class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f">
+            <path
+              d="m320-160-56-57 103-103H80v-80h287L264-503l56-57 200 200-200 200Zm320-240L440-600l200-200 56 57-103 103h287v80H593l103 103-56 57Z" />
+          </svg>
+        </span> Compare
       </button>
       <button class="nav-btn" onclick="location.href='/shopping-list'">
-        <span class="icon">&#x1F4E6;</span> Bundles
+        <span class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f">
+            <path
+              d="M280-600v-80h560v80H280Zm0 160v-80h560v80H280Zm0 160v-80h560v80H280ZM160-600q-17 0-28.5-11.5T120-640q0-17 11.5-28.5T160-680q17 0 28.5 11.5T200-640q0 17-11.5 28.5T160-600Zm0 160q-17 0-28.5-11.5T120-480q0-17 11.5-28.5T160-520q17 0 28.5 11.5T200-480q0 17-11.5 28.5T160-440Zm0 160q-17 0-28.5-11.5T120-320q0-17 11.5-28.5T160-360q17 0 28.5 11.5T200-320q0 17-11.5 28.5T160-280Z" />
+          </svg>
+        </span> Bundles
       </button>
     </div>
   </div>
 
   <div class="compare-container">
-    <h1>Product Comparison</h1>
+    <h1 class="header">Get recommendations for items for any situation</h1>
+    <h3 class="description">Explain the event that you are planning for, then identify requirements
+      and constraints.</h3>
     <div class="compare-inputs">
       <div class="inputs-wrapper">
         <input class="item-input" type="text" placeholder="Enter item name" />
