Fixed a UI error in the compare.html and shopping_list.html templates.

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -40,9 +40,8 @@
   </div>
 
   <div class="compare-container">
-    <h1 class="header">Get recommendations for items for any situation</h1>
-    <h3 class="description">Explain the event that you are planning for, then identify requirements
-      and constraints.</h3>
+    <h1 class="header">Compare the specs of items</h1>
+    <h3 class="description">To start, search two or more items and compare them</h3>
     <div class="compare-inputs">
       <div class="inputs-wrapper">
         <input class="item-input" type="text" placeholder="Enter item name" />
