--- a/templates/compare.html
+++ b/templates/compare.html
@@ -22,7 +22,7 @@
       </button>
       <button class="nav-btn active" onclick="location.href='/compare'">
         <span class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff     ">
             <path
               d="m320-160-56-57 103-103H80v-80h287L264-503l56-57 200 200-200 200Zm320-240L440-600l200-200 56 57-103 103h287v80H593l103 103-56 57Z" />
           </svg>
@@ -40,9 +40,8 @@
   </div>
 
   <div class="compare-container">
-    <h1 class="header">Get recommendations for items for any situation</h1>
-    <h3 class="description">Explain the event that you are planning for, then identify requirements
-      and constraints.</h3>
+    <h1 class="header">Compare the specs of items</h1>
+    <h3 class="description">To start, search two or more items and compare them</h3>
     <div class="compare-inputs">
       <div class="inputs-wrapper">
         <input class="item-input" type="text" placeholder="Enter item name" />
