--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,11 @@
     </div>
   </div>
   <div class="chat-container">
+    <div class="chat-header-text">
+      <h1 class="header">Find exactly what you are looking for.</h1>
+      <h3 class="description">Search for an item and answer a few questions to get exact results.</h3>
+    </div>
+
 
     <div class="chat-messages" id="chat-messages">
     </div>
