--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -41,8 +41,10 @@
     </div>
 
     <div class="shopping-list-container">
-        <h1 class="header">Compare the specs of items</h1>
-        <h3 class="description">To start, search two or more items and compare them</h3>
+        <h1 class="header">Get recommendations for items for any situation</h1>
+        <h3 class="description">Explain the event that you are planning for, then identify requirements
+            and constraints.</h3>
+
         <div class="shopping-list-input">
             <input id="event-input" type="text" placeholder="Enter a event" />
             <button id="start-btn">
