--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -68,7 +68,6 @@ body {
 .navbar::before {
   content: '';
   position: absolute;
-  left: 0px;
   top: 0;
   height: 24%;
   left: -5px;
@@ -79,10 +78,9 @@ body {
 .navbar::after {
   content: '';
   position: absolute;
-  left: 0px;
   top: 0;
   height: 24%;
-  left: 99%;
+  right: -5px;
   border-left: 10px solid #E3E9EB;
   z-index: 1;
 }
@@ -274,104 +272,110 @@ body {
   max-width: 350px;
 }
 
-/*---BUNDLES TAB --- */
-.shopping-list-container {
-  padding-top: 3%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: #F3F6F7;
-  border: 1px solid #bfc8cb;
-  border-radius: 20px;
-  width: 98%;
-  height: 91%;
-  overflow: hidden;
-  position: relative;
+/*---TODO LIST --- */
+.todo-list-container {
+    background-color: #F3F6F7;
+    border: 1px solid #bfc8cb;
+    border-radius: 20px;
+    width: 98%;
+    height: 97%;
+    padding: 20px;
+  padding-top: 100px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.suggested-item {
-  /*   background-color: #f7f7f7; */
-  background: #AAB5B8;
-  background: radial-gradient(circle, rgba(178, 194, 194, 1) 0%, rgba(219, 228, 231, 1) 100%);
-
-
-  border: 1px solid #dcdcdc;
-  border-radius: 32px;
-  padding: 15px;
-  margin-bottom: 20px;
-  width: 300px;
-  height: 450px;
-}
-
-.item-name {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.item-reason {
-  margin-top: -10px;
-  font-size: 0.9em;
-  color: #555;
-}
-
-.item-price {
-  /*   margin: 10px; */
-  font-size: 1em;
-  color: #333;
-  /*   text-align: right; */
-}
-
-.item-image {
-  width: 300px;
-  border-radius: 16px;
-  border-bottom-right-radius: 40px;
-  border-bottom-left-radius: 40px;
-}
-
-.shopping-list-input {
-  display: flex;
-  align-items: center;
-  width: 500px;
-  margin: 20px;
-  /*   padding: 5px; */
-  border: 1px solid #dcdcdc;
-
-  background-color: #E3E9EB;
-  border-radius: 20px;
+.todo-header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 #event-input {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  margin: 0px;
-  padding: 20px;
-  border: none;
-  background-color: #E3E9EB;
-  border-radius: 20px;
-
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 #start-btn {
-  padding: 7px;
-  border: 0px;
-  border-radius: 10px;
-  padding-left: 14px;
-  padding-right: 14px;
-  margin: 0px;
-  background-color: #E3E9EB;
-  font-weight: bold;
-  /*   color: transparent; */
+    padding: 10px 20px;
+    border: none;
+    background-color: #2a8c82;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 10px;
 }
 
+#todo-title {
+    align-self: flex-start;
+    margin-left: 10%;
+}
 
+.todo-items {
+    list-style: none;
+    padding: 0;
+    width: 80%;
+}
 
+.todo-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
 
-.item-details {
-  /*   align-items: center; */
-  /*   display: flex; */
-  /*   flex-direction: row; */
-  /*   align-items: center; */
-  /*   margin-top: 10px; */
+.todo-item input[type="checkbox"] {
+    margin-right: 15px;
+}
+
+.item-text {
+    flex-grow: 1;
+}
+
+.item-text .item-name {
+    font-weight: bold;
+}
+
+.item-text .item-reason {
+    font-size: 0.9em;
+    color: #666;
+}
+
+.item-price {
+    min-width: 80px;
+    text-align: right;
+    color: #2a8c82;
+    font-weight: bold;
+}
+
+.delete-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    margin-left: 15px;
+}
+
+.add-item-container {
+    width: 80%;
+    margin-top: 20px;
+}
+
+#add-item-btn {
+    width: 100%;
+    padding: 15px;
+    border: 1px dashed #ccc;
+    background-color: #fafafa;
+    cursor: pointer;
+    text-align: left;
+    color: #555;
+}
+
+.todo-item.completed .item-text {
+    text-decoration: line-through;
+    color: #aaa;
 }
