Fixed Chatbot Prompt, Image Css

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -337,6 +337,28 @@ body {
     flex-grow: 1;
 }
 
+
+.suggested-item {
+  /*   background-color: #f7f7f7; */
+  background: #AAB5B8;
+  background: radial-gradient(circle, rgba(178, 194, 194, 1) 0%, rgba(219, 228, 231, 1) 100%);
+
+
+  border: 1px solid #dcdcdc;
+  border-radius: 32px;
+  padding: 15px;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 450px;
+}
+
+.item-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
 .item-text .item-name {
     font-weight: bold;
 }
