--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -55,7 +55,9 @@
                 </svg>
             </button>
         </div>
-        <div id="shopping-list-results"></div>
+        <h2 id="todo-title" style="display: none;"></h2>
+        <ul id="todo-items"></ul>
+        <button id="add-item-btn" style="display: none;">+ Generate another...</button>
         <div id="final-shopping-list" style="display: none;"></div>
     </div>
     <script src="/static/shopping_list.js"></script>
