--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Shopping List Assistant</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
+  <title>CNZ Shopping List</title>
     <link rel="stylesheet" href="/static/styles/style.css" />
 </head>
 
