--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
   <title>CNZ Chatbot</title>
   <link rel="stylesheet" href="static/styles/style.css" />
 
