--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -1,69 +1,103 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
+        <title>CNZ Shopping List</title>
+        <link rel="stylesheet" href="/static/styles/style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
-  <title>CNZ Shopping List</title>
-    <link rel="stylesheet" href="/static/styles/style.css" />
-</head>
-
-<body>
-    <div class="chat-header">
-        <div class="navbar">
-            <button class="nav-btn" onclick="location.href='/'">
-                <span class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#1f1f1f">
-                        <path
-                            d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
-                    </svg>
-                </span><span class="nav-btn-text"> Search</span>
-            </button>
-            <button class="nav-btn" onclick="location.href='/compare'">
-                <span class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#1f1f1f">
-                        <path
-                            d="m320-160-56-57 103-103H80v-80h287L264-503l56-57 200 200-200 200Zm320-240L440-600l200-200 56 57-103 103h287v80H593l103 103-56 57Z" />
-                    </svg>
-                </span><span class="nav-btn-text"> Compare</span>
-            </button>
-            <button class="nav-btn active" onclick="location.href='/shopping-list'">
-                <span class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#fff">
-                        <path
-                            d="M280-600v-80h560v80H280Zm0 160v-80h560v80H280Zm0 160v-80h560v80H280ZM160-600q-17 0-28.5-11.5T120-640q0-17 11.5-28.5T160-680q17 0 28.5 11.5T200-640q0 17-11.5 28.5T160-600Zm0 160q-17 0-28.5-11.5T120-480q0-17 11.5-28.5T160-520q17 0 28.5 11.5T200-480q0 17-11.5 28.5T160-440Zm0 160q-17 0-28.5-11.5T120-320q0-17 11.5-28.5T160-360q17 0 28.5 11.5T200-320q0 17-11.5 28.5T160-280Z" />
-                    </svg>
-                </span><span class="nav-btn-text"> Bundles</span>
-            </button>
+    <body>
+        <div class="chat-header">
+            <div class="navbar">
+                <button class="nav-btn" onclick="location.href='/'">
+                    <span class="icon">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            height="24px"
+                            viewBox="0 -960 960 960"
+                            width="24px"
+                            fill="#DBD1BE"
+                        >
+                            <path
+                                d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
+                            />
+                        </svg> </span
+                    ><span class="nav-btn-text"> Search</span>
+                </button>
+                <button class="nav-btn" onclick="location.href='/compare'">
+                    <span class="icon">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            height="24px"
+                            viewBox="0 -960 960 960"
+                            width="24px"
+                            fill="#DBD1BE"
+                        >
+                            <path
+                                d="m320-160-56-57 103-103H80v-80h287L264-503l56-57 200 200-200 200Zm320-240L440-600l200-200 56 57-103 103h287v80H593l103 103-56 57Z"
+                            />
+                        </svg> </span
+                    ><span class="nav-btn-text"> Compare</span>
+                </button>
+                <button
+                    class="nav-btn active"
+                    onclick="location.href='/shopping-list'"
+                >
+                    <span class="icon">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            height="24px"
+                            viewBox="0 -960 960 960"
+                            width="24px"
+                            fill="#DBD1BE"
+                        >
+                            <path
+                                d="M280-600v-80h560v80H280Zm0 160v-80h560v80H280Zm0 160v-80h560v80H280ZM160-600q-17 0-28.5-11.5T120-640q0-17 11.5-28.5T160-680q17 0 28.5 11.5T200-640q0 17-11.5 28.5T160-600Zm0 160q-17 0-28.5-11.5T120-480q0-17 11.5-28.5T160-520q17 0 28.5 11.5T200-480q0 17-11.5 28.5T160-440Zm0 160q-17 0-28.5-11.5T120-320q0-17 11.5-28.5T160-360q17 0 28.5 11.5T200-320q0 17-11.5 28.5T160-280Z"
+                            />
+                        </svg> </span
+                    ><span class="nav-btn-text"> Bundles</span>
+                </button>
+            </div>
         </div>
-    </div>
 
-    <div class="todo-list-container">
-        <h1 class="header">Get recommendations for items for any situation</h1>
-        <h3 class="description">Explain the event that you are planning for, then identify requirements
-            and constraints.</h3>
+        <div class="todo-list-container">
+            <h1 class="header">
+                Get recommendations for items for any situation
+            </h1>
+            <h3 class="description">
+                Explain the event that you are planning for, then identify
+                requirements and constraints.
+            </h3>
 
-        <div class="shopping-list-input">
-            <input id="event-input" type="text" placeholder="Enter a event" />
-            <button id="start-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                    fill="#5e6061">
-                    <path
-                        d="M120-160v-640l760 320-760 320Zm80-120 474-200-474-200v140l240 60-240 60v140Zm0 0v-400 400Z" />
-                </svg>
+            <div class="shopping-list-input">
+                <input
+                    id="event-input"
+                    type="text"
+                    placeholder="Enter a event"
+                />
+                <button id="start-btn">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        height="24px"
+                        viewBox="0 -960 960 960"
+                        width="24px"
+                        fill="#5e6061"
+                    >
+                        <path
+                            d="M120-160v-640l760 320-760 320Zm80-120 474-200-474-200v140l240 60-240 60v140Zm0 0v-400 400Z"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <h2 id="todo-title" style="display: none"></h2>
+            <ul id="todo-items"></ul>
+            <button id="add-item-btn" style="display: none">
+                + Generate another...
             </button>
+            <div id="final-shopping-list" style="display: none"></div>
         </div>
-        <h2 id="todo-title" style="display: none;"></h2>
-        <ul id="todo-items">
-        </ul>
-        <button id="add-item-btn" style="display: none;">+ Generate another...</button>
-        <div id="final-shopping-list" style="display: none;"></div>
-    </div>
-    <script src="/static/shopping_list.js"></script>
-</body>
-
+        <script src="/static/shopping_list.js"></script>
+    </body>
 </html>
