--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
     <title>CNZ Chatbot</title>
     <link rel="stylesheet" href="static/styles/style.css" />
+    <script src="https://js.puter.com/v2/"></script>
   </head>
 
   <body>
