--- a/templates/compare.html
+++ b/templates/compare.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
         <title>CNZ Compare</title>
         <link rel="stylesheet" href="/static/styles/style.css" />
+        <script src="https://js.puter.com/v2/"></script>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
