--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -6,6 +6,8 @@
         <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
         <title>CNZ Shopping List</title>
         <link rel="stylesheet" href="/static/styles/style.css" />
+        <link rel="stylesheet" href="/static/styles/shopping_list.css" />
+        <script src="https://js.puter.com/v2/"></script>
     </head>
 
     <body>
