--- a/static/styles/shopping_list.css
+++ b/static/styles/shopping_list.css
@@ -35,14 +35,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     background-color: var(--color-bg-tertiary);
     border-radius: 12px;
-    font-size: 0.8em;
+    font-size: 0.7rem;
     font-family: "JetBrains Mono", monospace;
     border: 1px solid var(--color-border-input-light);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 60px;
+    height: 45px;
+    width: 347px;
 }
 
 .suggested-item .item-details {
